<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.inmoprop.ui.inicio.InicioFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_inicio" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.inmoprop.ui.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_nav_perfil_to_cambiarPassFragment"
            app:destination="@id/cambiarPassFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.example.inmoprop.ui.inmuebles.InmueblesFragment"
        android:label="@string/inmuebles"
        tools:layout="@layout/fragment_inmuebles" >
        <action
            android:id="@+id/action_nav_inmuebles_to_detalleInmuebleFragment"
            app:destination="@id/detalleInmuebleFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.example.inmoprop.ui.contratos.ContratosFragment"
        android:label="@string/contratos"
        tools:layout="@layout/fragment_contratos" >
        <action
            android:id="@+id/action_nav_contratos_to_detalleContratoFragment"
            app:destination="@id/detalleContratoFragment" />
        <action
            android:id="@+id/action_nav_contratos_to_nav_inquilinos"
            app:destination="@id/detalleInquilinoFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.inmoprop.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/cambiarPassFragment"
        android:name="com.example.inmoprop.ui.perfil.CambiarPassFragment"
        android:label="Cambiar contraseña"
        tools:layout="@layout/fragment_cambiar_pass" >
        <action
            android:id="@+id/action_cambiarPassFragment_to_nav_perfil"
            app:destination="@id/nav_perfil" />
    </fragment>
    <fragment
        android:id="@+id/detalleInmuebleFragment"
        android:name="com.example.inmoprop.ui.inmuebles.DetalleInmuebleFragment"
        android:label="Detalles de Inmueble"
        tools:layout="@layout/fragment_detalle_inmueble" >
        <action
            android:id="@+id/action_detalleInmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/detalleInquilinoFragment"
        android:name="com.example.inmoprop.ui.inquilinos.InquilinosFragment"
        android:label="Detalles del Inquilino"
        tools:layout="@layout/fragment_inquilinos" >
        <action
            android:id="@+id/action_nav_inquilinos_to_nav_contratos"
            app:destination="@id/nav_contratos" />
    </fragment>
    <fragment
        android:id="@+id/detalleContratoFragment"
        android:name="com.example.inmoprop.ui.contratos.DetalleContratoFragment"
        android:label="Detalles de Contrato"
        tools:layout="@layout/fragment_detalle_contrato" >
        <action
            android:id="@+id/action_detalleContratoFragment_to_nav_contratos"
            app:destination="@id/nav_contratos" />
        <action
            android:id="@+id/action_detalleContratoFragment_to_pagosFragment"
            app:destination="@id/pagosFragment" />
    </fragment>
    <fragment
        android:id="@+id/pagosFragment"
        android:name="com.example.inmoprop.ui.pagos.PagosFragment"
        android:label="Historial de Pagos"
        tools:layout="@layout/fragment_pagos" >
        <action
            android:id="@+id/action_pagosFragment_to_detalleContratoFragment"
            app:destination="@id/detalleContratoFragment" />
    </fragment>
</navigation>